--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,9 @@ env:
 
 # Controls when the action will run.
 on:
-  # push:
-  #   branches:
-  #     - "master"
+  push:
+    branches:
+      - "main"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
