--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           version: 10.4.0
       - run: npx pnpm install
+      - run: npx pnpm lint
       - run: npx pnpm build
       - name: Install zip
         uses: montudor/action-zip@v1
