--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "logseq-todoist-backup",
   "version": "1.0.2",
+  "type": "module",
   "main": "dist/index.html",
   "scripts": {
     "dev": "vite",
@@ -19,11 +20,11 @@
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "12.0.2",
     "@types/node": "24.7.0",
-    "@typescript-eslint/eslint-plugin": "8.45.0",
-    "@typescript-eslint/parser": "8.45.0",
+    "@typescript-eslint/eslint-plugin": "8.46.0",
+    "@typescript-eslint/parser": "8.46.0",
     "conventional-changelog-conventionalcommits": "9.1.0",
     "eslint": "9.37.0",
-    "typescript-eslint": "8.45.0",
+    "typescript-eslint": "8.46.0",
     "semantic-release": "24.2.9",
     "typescript": "5.9.3",
     "vite": "7.1.9",
